<resources>
    <string name="app_name">Catatan Dompet</string>
    <string name="catatan_dompet">Catatan Dompet</string>
    <string name="title_activity_menu_navigation">MenuNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tambah">Tambah</string>
    <string name="cari">Cari</string>
    <string name="laporan">Laporan</string>
    <string name="kategori">Kategori</string>
    <string name="tentang">Tentang</string>
    <string name="tanggal">Tanggal</string>
    <string name="jumlah">Jumlah</string>
    <string name="keterangan">Keterangan</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="tipe">Tipe</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="jenis_kategori">Jenis Kategori</string>
    <string name="ok">OK</string>
    <string name="versi_app">Anda sedang menggunakan Catatan Dompet Versi : 1.0.</string>
    <string name="disclaimer">[1] Aplikasi ini bersifat studi dan tidak diperuntunkan untuk kegiatan komersial.
        [2] Pengembang tidak menjamin bahwa aplikasi ini akan bebas dari error dan kesalahan.
        [3] Pengembang tidak bertanggung jawab atas kelalaian yang dilakukan oleh pengguna ketika menggunakan aplikasi ini.
        [4] Pengembang tidak bertanggung jawab atas kegagalan teknis / kegagalan aplikasi / maupun kerusakan perangkat yang terjadi ketika menggunakan aplikasi ini.
        [5] Dengan menggunakan aplikasi ini berarti anda setuju dengan disclaimer dan ketentuan yang sudah tertera diatas.</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="hapus">Hapus</string>
    <string name="sub_title_splash">Catat Keuangan Harian Anda</string>
    <string name="ubah">UBAH</string>
    <string name="coming_soon">Segera!</string>
    <string name="konfirmasi_hapus">Apakah Anda yakin Ingin Menghapus Transaksi Ini?</string>
    <string name="tentang_app">Catatan Dompet merupakan aplikasi pencatatan keuangan yang dibuat guna mempermudah pendataan pemasukan dan pengeluaran sehari-hari.</string>
    <string name="data_kosong">Data belum tersedia, Silahkan tambahkan data baru.</string>

    <string-array name="jenis_transaksi_dan_kategori">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>


    <string-array name="listKategoriPemasukan">
        <item>Gaji</item>
        <item>Deposito</item>
        <item>Investasi</item>
        <item>Penjualan</item>
        <item>Penyewaan</item>
        <item>Kupon</item>
        <item>Bonus</item>
        <item>Dividen</item>
        <item>Lain-lain</item>
    </string-array>

    <string-array name="listKategoriPengeluaran">
        <item>Hiburan</item>
        <item>Pajak</item>
        <item>Tagihan</item>
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Transportasi</item>
        <item>Telepon</item>
        <item>Lain-lain</item>
    </string-array>
</resources>
