<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".TambahKategori">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen10">

        <TextView
            android:id="@+id/TV_Nama_Kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen10"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/nama_kategori"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font18" />

        <EditText
            android:id="@+id/ET_Nama_Kategori"
            android:layout_width="@dimen/dimen264"
            android:layout_height="@dimen/dimen40"
            android:background="@drawable/square_edit_text"
            android:fontFamily="@font/proxima_nova_regular"
            android:padding="@dimen/dimen6"
            android:textColor="@color/colorBlack"
            android:inputType="textCapSentences"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen10">

        <TextView
            android:id="@+id/TV_Jenis_Kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen10"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/jenis_kategori"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font18" />

        <EditText
            android:id="@+id/ET_Jenis_Kategori"
            android:layout_width="@dimen/dimen264"
            android:layout_height="@dimen/dimen40"
            android:background="@drawable/square_edit_text"
            android:fontFamily="@font/proxima_nova_regular"
            android:padding="@dimen/dimen6"
            android:textColor="@color/colorBlack" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen15"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/BT_Simpan_Transaksi"
            android:layout_width="@dimen/dimen80"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/simpan"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font16" />

        <Button
            android:id="@+id/BT_Batal_Transaksi"
            android:layout_width="@dimen/dimen80"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/batal"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font16" />
    </LinearLayout>

</LinearLayout>